2011-02-01 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/GameplayOptions_gump.cc: Make face stats work properly in
		the Exult menu. Bug 3169747

2011-01-31 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamedat.cc: Don't return newlines in get_game_identity and
		get_game_identity_zip.

2011-01-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* combat.cc: Fix regression in 5915 that caused an endless loop.
		Bug 3131920

2011-01-27 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamedat.cc, gumps/Newfile_gump.cc: Dev games now use
		exult??dev.sav instead of exult??si.sav for saved game names.

2011-01-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/GameplayOptions_gump.cc, gumps/MiscOptions_gump.*,
		gumps/VideoOptions_gump.*: Make code more consistent with
		AudioOptions_gump. Remove some unused code.

2011-01-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/AudioOptions_gump.*: Add sample rate and speaker type
		buttons. Music tracks now restart if changing audio options
		caused it to stop. Remove unused using std::cerr and std::endl
	* menulist.cc: Add alt-q as quit for Exult menu. For Macs,
		cmd-x has also been added.
	* data/audiooptions.shp: Made 15 pixels taller

2011-01-23 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/*.xml: Updated documentations
	* docs/images/docs*.png: updated documentation screenshots with 
		newer options and added transparency.
	
2011-01-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.*: Add "config/video/share_video_settings". "yes"
		means that fullscreen and window share the same video
		settings (else "no"). Default is yes.
		Removed unused MENU_APPLY.
	* gumps/VideoOptions_gump.*: Only set video options in the config
		after yes/no gump. Add button for share_video_settings.

2011-01-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* keys.cc: Fix regression in 6701 where the last created key